@@ -1,24 +1,24 @@
-# PL/SQL Cop Command Line
+# db\* CODECOP Command Line
 
 ## Introduction
 
-Trivadis PL/SQL Cop is a command line utility to check Oracle SQL*Plus files for compliance violations of the [Trivadis PL/SQL & SQL Coding Guidelines Version 3.6](https://trivadis.github.io/plsql-and-sql-coding-guidelines/v3.6/).
+Trivadis db\* CODECOP is a command line utility to check Oracle SQL*Plus files for compliance violations of the [Trivadis PL/SQL & SQL Coding Guidelines Version 4.0](https://trivadis.github.io/plsql-and-sql-coding-guidelines/v4.0/).
 
 Furthermore McCabe’s cyclomatic complexity, Halstead’s volume, the maintainability index and some other software metrics are calculated for each PL/SQL unit and aggregated on file level.
 
 The code checking results are stored in XML, HTML and Excel files for further processing.
 
-To get the most out of this command line utility you should make it part of your Continuous Integration environment by using the [PL/SQL Cop for SonarQube](https://github.com/Trivadis/plsql-cop-sonar) plugin. This way you may control the quality of your code base over time.
+To get the most out of this command line utility you should make it part of your Continuous Integration environment by using the [db\* CODECOP for SonarQube](https://github.com/Trivadis/plsql-cop-sonar) plugin. This way you may control the quality of your code base over time.
 
-Have also a look at [PL/SQL Cop for SQL Developer](https://github.com/Trivadis/plsql-cop-sqldev) if you are interested to check the code quality of PL/SQL code within SQL Developer. It’s a free extension.
+Have also a look at [db\* CODECOP for SQL Developer](https://github.com/Trivadis/plsql-cop-sqldev) if you are interested to check the code quality of PL/SQL code within SQL Developer. It’s a free extension.
 
-PL/SQL Cop supports custom validators. A validator must implement the `PLSQLCopValidator` Java interface and has to be a direct or indirect descendant of the `PLSQLJavaValidator` class.
+db\* CODECOP supports custom validators. A validator must implement the `PLSQLCopValidator` Java interface and has to be a direct or indirect descendant of the `PLSQLJavaValidator` class.
 
 You may use these validators as is or amend/extend them to suit your needs.
 
 ## Examples
 
-Here are some screen shot taken from an of an HTML report based on the samples provided with PL/SQL Cop.
+Here are some screen shot taken from an of an HTML report based on the samples provided with db\* CODECOP.
 
 ![Processing & Content](images/plsqlcop_processing.png)
 ![Issue Overview](images/plsqlcop_issues_overview.png)
@@ -26,11 +26,11 @@ Here are some screen shot taken from an of an HTML report based on the samples p
 ![File Overview](images/plsqlcop_file_overview.png)
 ![File Issues](images/plsqlcop_file_issues.png)
 
-These [HTML](https://trivadis.github.io/plsql-cop-cli/tvdcc_report.html) and [Excel](https://trivadis.github.io/plsql-cop-cli/tvdcc_report.xlsx) reports have been created by PL/SQL Cop and are based on a simple set of good and bad example files distributed with PL/SQL Cop.
+These [HTML](https://trivadis.github.io/plsql-cop-cli/tvdcc_report.html) and [Excel](https://trivadis.github.io/plsql-cop-cli/tvdcc_report.xlsx) reports have been created by db\* CODECOP and are based on a simple set of good and bad example files distributed with db\* CODECOP.
 
-## Custom Guidelines as PL/SQL Cop Plugins
+## Custom Guidelines as db\* CODECOP Plugins
 
-Since version 2.0 PL/SQL Cop supports custom validators. Such a validator must implement the PLSQLCopValidator Java interface and has to be a direct or indirect descendant of the PLSQLJavaValidator class. To simplify the development of a validator an example is provided as Maven project in a dedicated [GitHub repository](https://github.com/Trivadis/cop-validators). This example validator implements 15 guidelines to cover the [chapter 2.2 Naming Conventions of the Trivadis PL/SQL & SQL Coding Guidelines](https://trivadis.github.io/plsql-and-sql-coding-guidelines/2-naming-conventions/naming-conventions/). The following screenshot shows how checks are implemented.
+db\* CODECOP supports custom validators. Such a validator must implement the PLSQLCopValidator Java interface and has to be a direct or indirect descendant of the PLSQLValidator class. To simplify the development of a validator an example is provided as Maven project in a dedicated [GitHub repository](https://github.com/Trivadis/cop-validators). This example validator implements 15 guidelines to cover the [chapter 2.2 Naming Conventions of the Trivadis PL/SQL & SQL Coding Guidelines](https://trivadis.github.io/plsql-and-sql-coding-guidelines/2-naming-conventions/naming-conventions/). The following screenshot shows how checks are implemented.
 
 ![File Issues](images/plsqlcop_custom_validator.png)
 
@@ -48,21 +48,48 @@ You find all releases and release information [here](https://github.com/Trivadis
 
 ## Installation
 
-1. Uncompress the distributed PL/SQL Cop archive file into a folder of your choice. 
+1. Uncompress the distributed db\* CODECOP archive file into a folder of your choice. 
 
     The archive file contains the following files in the root directory: `ReadMe.html`, `tvdcc.jar`, `tvdcc.sh`, `tvdcc.cmd`, `PLSQL-and-SQL-Coding-Guidelines.html` and the subdirectories `lib`, `eclipse`, `plugin` and `sample`. SQL scripts with good and bad examples for every guideline are provided in the sample directory.
 
 2. Amend the settings for `JAVA_HOME` in tvdcc.cmd to meet your environment settings.
 
-    This is necessary on Windows only, and only if the `java.exe` cannot be found in the path. Use at least a Java 7 runtime environment (JRE) or development kit (JDK) for JAVA_HOME.
+    This is necessary on Windows only, and only if the `java.exe` cannot be found in the path. Use at least a Java 8 runtime environment (JRE) or development kit (JDK) for JAVA_HOME.
 
 3. Include `TVDCC_HOME` in your PATH environment variable for handy interactive usage.
 
 4. Optionally copy your commercial license file into the `TVDCC_HOME` directory. For simplicity name the file `tvdcc.lic`.
 
+5. Ignoring JDK warnings
+
+    When using JDK 11 the following warnings are thrown:
+
+    ```
+    WARNING: An illegal reflective access operation has occurred
+    WARNING: Illegal reflective access by com.google.inject.internal.cglib.core.$ReflectUtils$2 (file:/usr/local/bin/tvdcc/lib/guice-3.0.jar) to method java.lang.ClassLoader.defineClass(java.lang.String,byte[],int,int,java.security.ProtectionDomain)
+    WARNING: Please consider reporting this to the maintainers of com.google.inject.internal.cglib.core.$ReflectUtils$2
+    WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+    WARNING: All illegal access operations will be denied in a future release
+    ```
+
+    This message is caused by https://github.com/google/guice/issues/1133 . It should be fixed in Guice 5.0.1. In future releases this warning should disappear, when our third party libraries have updated their dependencies. For the time being you have to ignore this warning.
+
+    When using JDK 16 the following error is thrown:
+
+    ```
+    Exception in thread "main" java.lang.ExceptionInInitializerError
+      at com.trivadis.tvdcc.CodeChecker.validateFiles(CodeChecker.java:225)
+      at com.trivadis.tvdcc.CodeChecker.doCodeCheck(CodeChecker.java:150)
+      at com.trivadis.tvdcc.CodeChecker.mainFunction(CodeChecker.java:64)
+      at com.trivadis.tvdcc.CodeChecker.main(CodeChecker.java:43)
+    Caused by: com.google.inject.internal.util.$ComputationException: com.google.inject.internal.util.$ComputationException: java.lang.ExceptionInInitializerError
+    ```
+
+    To fix the issue you have to add the JVM argument `--illegal-access=warn` in the `tvdcc.sh` and `tvdcc.cmd`. This will show a warning as in earlier JDK versions.
+
 ## Usage
 
-If PL/SQL cop is invoked without arguments, the following help screen is shown, after the copyright information:
+If db\* CODECOP is invoked without arguments, the following help screen is shown, after the copyright information:
 
 ```
 usage: tvdcc path=<path> [options]
@@ -93,12 +120,12 @@ options:
   nosonar=false          ignore "-- NOSONAR" marker comments (do not suppress warnings)
   license=<name>         name incl. path to license file, default tvdcc.lic in the root folder
   propertyfile=<name>    load properties from file, e.g. ./tvdcc.properties
-  validator=<name>       decendent of PLSQLJavaValidator and implements PLSQLCopValidator interface, 
+  validator=<name>       decendent of PLSQLValidator and implements PLSQLCopValidator interface, 
                          default is com.trivadis.tvdcc.validators.TrivadisGuidelines3
   genmodel={true|false}  generate SonarQube XML model files, default is false.
 ```
 
-Please note that PL/SQL Cop applies by default a filter to support the following file extensions: `.sql`, `.prc`, `.fnc`, `.pks`, `.pkb`, `.trg`, `.vw`, `.tps`, `.tbp`, `.plb`, `.pls`, `.rcv`, `.spc`, `.typ`, `.aqt`, `.aqp`, `.ctx`, `.dbl`, `.tab`, `.dim`, `.snp`, `.con`, `.collt`, `.seq`, `.syn`, `.grt`, `.sp`, `.spb`, `.sps`, `.pck`. 
+Please note that db\* CODECOP applies by default a filter to support the following file extensions: `.sql`, `.prc`, `.fnc`, `.pks`, `.pkb`, `.trg`, `.vw`, `.tps`, `.tbp`, `.plb`, `.pls`, `.rcv`, `.spc`, `.typ`, `.aqt`, `.aqp`, `.ctx`, `.dbl`, `.tab`, `.dim`, `.snp`, `.con`, `.collt`, `.seq`, `.syn`, `.grt`, `.sp`, `.spb`, `.sps`, `.pck`. 
 
 The value of all options will be included in the output files and on the console output. 
 
@@ -116,11 +143,11 @@ see [Frequently Ased Questions](FAQ.md).
 
 ## Further Information
 
-Please find further information about PL/SQL Cop on the [Trivadis](https://www.trivadis.com/en/plsql-cop) website.
+Please find further information about db\* CODECOP on the [Trivadis](https://www.trivadis.com/en/plsql-cop) website.
 
 ## License
 
-The preview/trial version of PL/SQL Cop is licensed under the Creative Commons Attribution-NonCommercial-NoDerivs 3.0 Unported License. You may obtain a copy of the License at https://creativecommons.org/licenses/by-nc-nd/3.0/.
+The preview/trial version of db\* CODECOP is licensed under the Creative Commons Attribution-NonCommercial-NoDerivs 3.0 Unported License. You may obtain a copy of the License at https://creativecommons.org/licenses/by-nc-nd/3.0/.
 
 ![CC-BY_NC-ND](images/CC-BY-NC-ND.png)
 
